# VectorScope_Non_Python

./: .gitignore  CMakeLists.txt  README.md  tasks.json
frontend/: index.html  package.json
frontend/src/: App.jsx
scripts/: build_and_run.bat  build_and_run.sh
src/: main.cpp
